--- a/script1.ipynb
+++ b/script1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2s+QwINKNTo8ta93AUsl/",
+      "authorship_tag": "ABX9TyP0OClidS8Xkh8NEvQeC2VR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,57 +28,68 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# Step 1: Mount Google Drive\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "pdf_path = \"/content/drive/MyDrive/Mendo - Principe perfecto.pdf\"\n"
+      ],
+      "metadata": {
+        "id": "07mtLYBfqtv_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "HIv8yx7s2pBW"
       },
       "outputs": [],
       "source": [
-        "# Step 1: Install dependencies\n",
+        "# Install necessary packages\n",
         "!pip install PyPDF2 transformers --quiet\n",
         "\n",
-        "# Step 2: Import libraries\n",
+        "# Import packages\n",
         "import PyPDF2\n",
         "from transformers import pipeline\n",
-        "from google.colab import files\n",
         "\n",
-        "# Step 3: Upload PDF file\n",
-        "uploaded = files.upload()\n",
-        "\n",
-        "# Get the uploaded file name\n",
-        "pdf_path = list(uploaded.keys())[0]\n",
-        "\n",
-        "# Step 4: Extract text from PDF\n",
+        "# Define function to extract PDF text\n",
         "def extract_text_from_pdf(pdf_path):\n",
         "    text = \"\"\n",
         "    with open(pdf_path, 'rb') as file:\n",
         "        pdf = PyPDF2.PdfReader(file)\n",
         "        for page in pdf.pages:\n",
-        "            text += page.extract_text() + \"\\n\"\n",
+        "            page_text = page.extract_text()\n",
+        "            if page_text:\n",
+        "                text += page_text + \"\\n\"\n",
         "    return text.strip()\n",
         "\n",
-        "# Step 5: Use LLM (summarization model)\n",
+        "# Define function to summarize with LLM\n",
         "def summarize_text(text):\n",
         "    summarizer = pipeline(\"summarization\", model=\"sshleifer/distilbart-cnn-12-6\")\n",
         "\n",
-        "    # Break text into smaller chunks\n",
         "    max_chunk = 800\n",
-        "    text_chunks = [text[i:i+max_chunk] for i in range(0, len(text), max_chunk)]\n",
+        "    chunks = [text[i:i+max_chunk] for i in range(0, len(text), max_chunk)]\n",
         "\n",
         "    summaries = []\n",
-        "    for chunk in text_chunks:\n",
-        "        summary = summarizer(chunk, max_length=120, min_length=30, do_sample=False)[0]['summary_text']\n",
-        "        summaries.append(summary)\n",
+        "    for chunk in chunks:\n",
+        "        summary = summarizer(chunk, max_length=120, min_length=30, do_sample=False)\n",
+        "        summaries.append(summary[0]['summary_text'])\n",
         "\n",
         "    return \"\\n\\n\".join(summaries)\n",
         "\n",
-        "# Step 6: Run everything\n",
-        "raw_text = extract_text_from_pdf(pdf_path)\n",
-        "readable_text = summarize_text(raw_text)\n",
+        "# Path to your PDF in Google Drive\n",
+        "pdf_path = \"/content/drive/MyDrive/Mendo - Principe perfecto.pdf\"\n",
         "\n",
-        "# Step 7: Display result\n",
-        "print(\"=== 📖 Readable Summary ===\\n\")\n",
-        "print(readable_text)\n"
+        "# Process\n",
+        "raw_text = extract_text_from_pdf(pdf_path)\n",
+        "readable_summary = summarize_text(raw_text)\n",
+        "\n",
+        "# Output\n",
+        "print(\"=== 📘 Readable Summary ===\\n\")\n",
+        "print(readable_summary)\n"
       ]
     }
   ]
