--- a/script.ipynb
+++ b/script.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNTNB+m9yNefPP73umxPelY",
+      "authorship_tag": "ABX9TyOG7GrdP1rfUQFOliuDvDp5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2079,7 +2079,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/saadkhi/Histract/blob/Saaday/script.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/saadkhi/Histract/blob/main/script.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -2098,7 +2098,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "HIv8yx7s2pBW",
         "colab": {
@@ -2369,7 +2369,7 @@
         "# STEP 2: Install required packages\n",
         "!pip install PyPDF2 transformers gdown --quiet\n",
         "\n",
-        "# STEP 3: Clone the shared Google Drive folder using gdown (requires folder ID)\n",
+        "# STEP 3: Clone the shared Google Drive folder using gdown\n",
         "import os\n",
         "\n",
         "# If folder already exists, skip download\n",
