--- a/PDF_extract.ipynb
+++ b/PDF_extract.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOHDXHLeDDhkq8fgXp+/Csa",
+      "authorship_tag": "ABX9TyNNVE0zuh9QwqIZbBmGKJvR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -326,7 +326,7 @@
         "# STEP 2: Install required packages\n",
         "!pip install PyPDF2 transformers gdown --quiet\n",
         "\n",
-        "# STEP 3: Clone the shared Google Drive folder using gdown (requires folder ID)\n",
+        "# STEP 3: Clone the shared Google Drive folder using gdown\n",
         "import os\n",
         "\n",
         "# If folder already exists, skip download\n",
